# radical

./: .appveyor.yml  .clang-format  .travis.sh  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
apps/: CMakeLists.txt  calibrate_radiometric_response.cpp  display_radiometric_response.cpp
apps/grabbers/: CMakeLists.txt  grabber.cpp  grabber.h  openni2_grabber.cpp  openni2_grabber.h  realsense_grabber.cpp
apps/utils/: plotting.h  program_options.h
cmake/: Config.cmake.in  Uninstall.cmake.in  Utils.cmake
cmake/modules/: FindOpenNI2.cmake  FindPylon.cmake  FindRealSense.cmake
doc/: calibrate-radiometric-response.md  calibrate-vignetting-response.md
include/grabbers/: grabber.h  openni2_grabber.h  pylon_grabber.h  realsense_grabber.h
include/radical/: check.h  exceptions.h  mat_io.h  nonparametric_vignetting_model.h  polynomial_vignetting_model.h  radiometric_response.h  version.h  vignetting_model.h
include/utils/: arrange_images_in_grid.h  brewer_colors.h  check.h  colors.h  key_code.h  mask_saturated_pixels.h  mat_io.h  mean_image.h  plot_histogram.h  plot_polynomial_vignetting_model.h  plot_radiometric_response.h
radical/: check.cpp  check.h  exceptions.h  mat_io.cpp  nonparametric_vignetting_model.cpp  nonparametric_vignetting_model.h  radiometric_response.cpp  radiometric_response.h  vignetting_model.h  vignetting_response.cpp  vignetting_response.h
src/apps/: CMakeLists.txt  display_radiometric_response.cpp  display_vignetting_response.cpp
src/apps/calibrate_radiometric_response/: CMakeLists.txt  calibrate_radiometric_response.cpp  calibration.cpp  calibration.h  dataset.cpp  dataset.h  dataset_collection.cpp  dataset_collection.h  debevec_calibration.cpp  debevec_calibration.h  engel_calibration.cpp  engel_calibration.h  optimization.cpp  optimization.h
src/apps/calibrate_vignetting_response/: CMakeLists.txt  blob_tracker.cpp  blob_tracker.h  calibrate_vignetting_response.cpp  model_fitting.cpp  model_fitting.h
src/apps/display_radiometric_response/: CMakeLists.txt  display_radiometric_response.cpp
src/apps/display_vignetting_response/: CMakeLists.txt  display_vignetting_response.cpp
src/apps/remove_vignetting/: CMakeLists.txt  remove_vignetting.cpp
src/grabbers/: CMakeLists.txt  grabber.cpp  openni2_grabber.cpp  pylon_grabber.cpp  realsense_grabber.cpp
src/radical/: check.cpp  mat_io.cpp  nonparametric_vignetting_model.cpp  polynomial_vignetting_model.cpp  radiometric_response.cpp  vignetting_model.cpp  vignetting_response.cpp
src/utils/: CMakeLists.txt  check.cpp  colors.cpp  key_code.cpp  mat_io.cpp  mean_image.cpp  plot_histogram.cpp  plot_radiometric_response.cpp
tests/: CMakeLists.txt  test.h.in  test_calibrate_radiometric_response.sh  test_mean_image.cpp  test_nonparametric_vignetting_model.cpp  test_polynomial_vignetting_model.cpp  test_radiometric_response.cpp  test_vignetting_response.cpp
tests/data/: .gitattributes  nonparametric_vignetting_model_identity.vgn  polynomial_vignetting_model_identity.vgn  radiometric_response_constant.crf  radiometric_response_constant.txt  radiometric_response_identity.crf  radiometric_response_identity.txt  radiometric_response_invalid.txt  radiometric_response_scaling.crf
tests/data/radiometric_response_calibration/: 000001_000.mat  000002_000.mat  000003_000.mat  000004_000.mat  000005_000.mat  000006_000.mat  000008_000.mat  000010_000.mat  000012_000.mat  000015_000.mat  000018_000.mat  000022_000.mat  000026_000.mat  000031_000.mat  000037_000.mat  000044_000.mat  000052_000.mat  000062_000.mat  000074_000.mat  000088_000.mat  000104_000.mat  000123_000.mat  000146_000.mat
